50/50 Implement TableView for Scenarios
Created CustomTableViewCell to input the custom data.
Created ScenariosViewController //Created the mini database here, nothing fancy, no core data nosqlite

Created A Scenarios Object

--- a/EPath-v0.0.1/Base.lproj/Main.storyboard
+++ b/EPath-v0.0.1/Base.lproj/Main.storyboard
@@ -11,20 +11,100 @@
         <!--Scenarios-->
         <scene sceneID="0iR-2P-w9V">
             <objects>
-                <viewController id="jrf-ga-wXu" sceneMemberID="viewController">
+                <viewController id="jrf-ga-wXu" customClass="ScenariosViewController" customModule="EPath_v0_0_1" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="jab-ze-Yjk">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="1Wk-g6-drT">
+                                <rect key="frame" x="0.0" y="59" width="393" height="710"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="scenario_cell" rowHeight="121" id="0kY-OG-GMF" customClass="CustomTableViewCell" customModule="EPath_v0_0_1" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="50" width="393" height="121"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="0kY-OG-GMF" id="jpz-a6-NSz">
+                                            <rect key="frame" x="0.0" y="0.0" width="393" height="121"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="F1i-ar-6GE">
+                                                    <rect key="frame" x="10" y="10" width="150" height="101"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="150" id="72E-q8-pWK"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f7b-Im-4pE">
+                                                    <rect key="frame" x="170" y="21" width="193" height="24"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tfI-Oq-jnM">
+                                                    <rect key="frame" x="170" y="80" width="193" height="24"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="F1i-ar-6GE" secondAttribute="bottom" constant="10" id="7os-Ku-Mvb"/>
+                                                <constraint firstItem="F1i-ar-6GE" firstAttribute="top" secondItem="jpz-a6-NSz" secondAttribute="top" constant="10" id="Gty-N0-Szx"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="f7b-Im-4pE" secondAttribute="trailing" constant="10" id="NMi-53-HSH"/>
+                                                <constraint firstItem="tfI-Oq-jnM" firstAttribute="top" secondItem="f7b-Im-4pE" secondAttribute="bottom" constant="35" id="aHe-av-0CE"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="tfI-Oq-jnM" secondAttribute="trailing" constant="10" id="ec3-OG-0Za"/>
+                                                <constraint firstItem="F1i-ar-6GE" firstAttribute="leading" secondItem="jpz-a6-NSz" secondAttribute="leading" constant="10" id="hvM-gN-2Hr"/>
+                                                <constraint firstItem="f7b-Im-4pE" firstAttribute="top" secondItem="jpz-a6-NSz" secondAttribute="topMargin" constant="10" id="llH-e1-BE6"/>
+                                                <constraint firstItem="f7b-Im-4pE" firstAttribute="leading" secondItem="F1i-ar-6GE" secondAttribute="trailing" constant="10" id="msv-Z1-Vdf"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="f7b-Im-4pE" secondAttribute="bottom" constant="65" id="n1d-8B-lco"/>
+                                                <constraint firstItem="tfI-Oq-jnM" firstAttribute="leading" secondItem="F1i-ar-6GE" secondAttribute="trailing" constant="10" id="p68-ZA-Jvt"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="tfI-Oq-jnM" secondAttribute="bottom" constant="6" id="vdM-pR-gqW"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="iconImageView" destination="F1i-ar-6GE" id="6KG-Sw-zqC"/>
+                                            <outlet property="lbl_Tag" destination="tfI-Oq-jnM" id="wBo-8L-wNa"/>
+                                            <outlet property="lbl_Title" destination="f7b-Im-4pE" id="TsJ-RJ-NwD"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="iFF-mM-1vj"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="1Wk-g6-drT" firstAttribute="leading" secondItem="iFF-mM-1vj" secondAttribute="leading" id="8YT-bt-sld"/>
+                            <constraint firstItem="iFF-mM-1vj" firstAttribute="bottom" secondItem="1Wk-g6-drT" secondAttribute="bottom" id="Jny-Pa-hLU"/>
+                            <constraint firstItem="1Wk-g6-drT" firstAttribute="top" secondItem="iFF-mM-1vj" secondAttribute="top" id="eip-W5-WvQ"/>
+                            <constraint firstItem="iFF-mM-1vj" firstAttribute="trailing" secondItem="1Wk-g6-drT" secondAttribute="trailing" id="o8z-9d-iLi"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Scenarios" image="person.3" catalog="system" selectedImage="person.3.fill" id="dIf-q0-xLX">
                         <color key="badgeColor" systemColor="systemGreenColor"/>
                     </tabBarItem>
+                    <connections>
+                        <outlet property="table" destination="1Wk-g6-drT" id="Qaq-Gd-eQr"/>
+                        <segue destination="EAa-n7-pLP" kind="show" identifier="select_Scenario" id="Wxl-d1-RwY"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4gm-d3-629" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="535" y="-184"/>
+            <point key="canvasLocation" x="533.58778625954199" y="-118.30985915492958"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="6oM-X8-Rsc">
+            <objects>
+                <viewController id="EAa-n7-pLP" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="de5-b6-uvX">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="fY5-lb-KEk"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="eWK-0a-oh5"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NsS-PV-OZ6" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1415" y="-118"/>
         </scene>
         <!--Home-->
         <scene sceneID="bbi-hk-iIk">
