--- a/EPath-v0.0.1/Base.lproj/Main.storyboard
+++ b/EPath-v0.0.1/Base.lproj/Main.storyboard
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Scenarios-->
+        <!--Scenarios View Controller-->
         <scene sceneID="0iR-2P-w9V">
             <objects>
                 <viewController id="jrf-ga-wXu" customClass="ScenariosViewController" customModule="EPath_v0_0_1" customModuleProvider="target" sceneMemberID="viewController">
@@ -17,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="1Wk-g6-drT">
-                                <rect key="frame" x="0.0" y="59" width="393" height="710"/>
+                                <rect key="frame" x="0.0" y="103" width="393" height="666"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="scenario_cell" rowHeight="121" id="0kY-OG-GMF" customClass="CustomTableViewCell" customModule="EPath_v0_0_1" customModuleProvider="target">
@@ -31,6 +31,7 @@
                                                     <rect key="frame" x="10" y="10" width="150" height="101"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="150" id="72E-q8-pWK"/>
+                                                        <constraint firstAttribute="height" constant="101" id="m1k-d7-fdQ"/>
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f7b-Im-4pE">
@@ -78,33 +79,100 @@
                             <constraint firstItem="iFF-mM-1vj" firstAttribute="trailing" secondItem="1Wk-g6-drT" secondAttribute="trailing" id="o8z-9d-iLi"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Scenarios" image="person.3" catalog="system" selectedImage="person.3.fill" id="dIf-q0-xLX">
-                        <color key="badgeColor" systemColor="systemGreenColor"/>
-                    </tabBarItem>
+                    <navigationItem key="navigationItem" id="Km7-5E-WjQ"/>
                     <connections>
                         <outlet property="table" destination="1Wk-g6-drT" id="Qaq-Gd-eQr"/>
-                        <segue destination="EAa-n7-pLP" kind="show" identifier="select_Scenario" id="Wxl-d1-RwY"/>
+                        <segue destination="EAa-n7-pLP" kind="show" identifier="select_Scenario_Segue" id="915-oj-MWa"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4gm-d3-629" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="533.58778625954199" y="-118.30985915492958"/>
+            <point key="canvasLocation" x="1460.3053435114502" y="-118.30985915492958"/>
         </scene>
-        <!--View Controller-->
+        <!--Scenarios Detail View Controller-->
         <scene sceneID="6oM-X8-Rsc">
             <objects>
-                <viewController id="EAa-n7-pLP" sceneMemberID="viewController">
+                <viewController id="EAa-n7-pLP" customClass="ScenariosDetailViewController" customModule="EPath_v0_0_1" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="de5-b6-uvX">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8Ca-hB-ABP">
+                                <rect key="frame" x="20" y="168" width="353" height="112"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="112" id="gR6-sb-Sv2"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Byd-YO-9ib">
+                                <rect key="frame" x="20" y="123" width="353" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="DESC" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r2Y-QI-LbM">
+                                <rect key="frame" x="20" y="300" width="353" height="197"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="textColor" systemColor="labelColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5fM-4S-TGO">
+                                <rect key="frame" x="159" y="715" width="75" height="35"/>
+                                <color key="tintColor" systemColor="systemGreenColor"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="Send"/>
+                            </button>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="justified" translatesAutoresizingMaskIntoConstraints="NO" id="EKw-dG-GWB">
+                                <rect key="frame" x="20" y="536" width="353" height="163"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="textColor" systemColor="labelColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Response:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kjs-rk-UHz">
+                                <rect key="frame" x="20" y="507" width="353" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="fY5-lb-KEk"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="EKw-dG-GWB" firstAttribute="leading" secondItem="fY5-lb-KEk" secondAttribute="leading" constant="20" id="7BY-pN-rYO"/>
+                            <constraint firstItem="EKw-dG-GWB" firstAttribute="top" secondItem="Kjs-rk-UHz" secondAttribute="bottom" constant="8" symbolic="YES" id="CAK-tY-dYc"/>
+                            <constraint firstItem="fY5-lb-KEk" firstAttribute="trailing" secondItem="Byd-YO-9ib" secondAttribute="trailing" constant="20" id="EOf-MH-lR2"/>
+                            <constraint firstItem="fY5-lb-KEk" firstAttribute="bottom" secondItem="5fM-4S-TGO" secondAttribute="bottom" constant="19" id="EqO-1Z-4qr"/>
+                            <constraint firstItem="5fM-4S-TGO" firstAttribute="top" secondItem="EKw-dG-GWB" secondAttribute="bottom" constant="16" id="FtD-Bk-4R0"/>
+                            <constraint firstItem="5fM-4S-TGO" firstAttribute="leading" secondItem="fY5-lb-KEk" secondAttribute="leading" constant="159" id="ILo-He-80m"/>
+                            <constraint firstItem="fY5-lb-KEk" firstAttribute="bottom" secondItem="r2Y-QI-LbM" secondAttribute="bottom" constant="272" id="Ktc-pe-Nqq"/>
+                            <constraint firstItem="8Ca-hB-ABP" firstAttribute="top" secondItem="Byd-YO-9ib" secondAttribute="bottom" constant="24" id="NmZ-BP-AxL"/>
+                            <constraint firstItem="fY5-lb-KEk" firstAttribute="trailing" secondItem="5fM-4S-TGO" secondAttribute="trailing" constant="159" id="PkH-T1-Z7t"/>
+                            <constraint firstItem="fY5-lb-KEk" firstAttribute="trailing" secondItem="Kjs-rk-UHz" secondAttribute="trailing" constant="20" id="Rhs-cv-XLw"/>
+                            <constraint firstItem="8Ca-hB-ABP" firstAttribute="leading" secondItem="fY5-lb-KEk" secondAttribute="leading" constant="20" id="YA7-PU-WLm"/>
+                            <constraint firstItem="fY5-lb-KEk" firstAttribute="trailing" secondItem="8Ca-hB-ABP" secondAttribute="trailing" constant="20" id="YLp-r1-VeF"/>
+                            <constraint firstItem="r2Y-QI-LbM" firstAttribute="leading" secondItem="fY5-lb-KEk" secondAttribute="leading" constant="20" id="ZU3-LU-Gka"/>
+                            <constraint firstItem="Kjs-rk-UHz" firstAttribute="top" secondItem="r2Y-QI-LbM" secondAttribute="bottom" constant="10" id="b95-zL-sZq"/>
+                            <constraint firstItem="Kjs-rk-UHz" firstAttribute="leading" secondItem="fY5-lb-KEk" secondAttribute="leading" constant="20" id="btw-CH-amr"/>
+                            <constraint firstItem="r2Y-QI-LbM" firstAttribute="top" secondItem="8Ca-hB-ABP" secondAttribute="bottom" constant="20" id="gML-sD-wTh"/>
+                            <constraint firstItem="Byd-YO-9ib" firstAttribute="leading" secondItem="fY5-lb-KEk" secondAttribute="leading" constant="20" id="l0g-T9-sy9"/>
+                            <constraint firstItem="fY5-lb-KEk" firstAttribute="trailing" secondItem="EKw-dG-GWB" secondAttribute="trailing" constant="20" id="lsT-cs-puG"/>
+                            <constraint firstItem="Byd-YO-9ib" firstAttribute="top" secondItem="fY5-lb-KEk" secondAttribute="top" constant="20" id="oag-cq-EFf"/>
+                            <constraint firstItem="fY5-lb-KEk" firstAttribute="trailing" secondItem="r2Y-QI-LbM" secondAttribute="trailing" constant="20" id="pna-q2-8Oj"/>
+                            <constraint firstItem="fY5-lb-KEk" firstAttribute="bottom" secondItem="8Ca-hB-ABP" secondAttribute="bottom" constant="489" id="wBY-Pa-Vxn"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="eWK-0a-oh5"/>
+                    <connections>
+                        <outlet property="img_Detail" destination="8Ca-hB-ABP" id="zyP-uy-B1O"/>
+                        <outlet property="lbl_Detail_Title" destination="Byd-YO-9ib" id="D6J-M1-YgP"/>
+                        <outlet property="txt_Detail_Description" destination="r2Y-QI-LbM" id="nkw-Ic-LHK"/>
+                        <outlet property="txt_Detail_Response" destination="EKw-dG-GWB" id="lLu-ar-wmQ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NsS-PV-OZ6" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1415" y="-118"/>
+            <point key="canvasLocation" x="2341.2213740458014" y="-118.30985915492958"/>
         </scene>
         <!--Home-->
         <scene sceneID="bbi-hk-iIk">
@@ -137,12 +205,33 @@
                     </tabBar>
                     <connections>
                         <segue destination="fRX-2c-1Ce" kind="relationship" relationship="viewControllers" id="HE9-Xw-lIZ"/>
-                        <segue destination="jrf-ga-wXu" kind="relationship" relationship="viewControllers" id="ORn-jc-otr"/>
+                        <segue destination="STG-t0-j54" kind="relationship" relationship="viewControllers" id="ORn-jc-otr"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UB6-xq-LQE" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-372" y="-487"/>
+        </scene>
+        <!--Scenarios-->
+        <scene sceneID="dWl-am-7Fz">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="STG-t0-j54" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Scenarios" image="person.3" catalog="system" selectedImage="person.3.fill" id="dIf-q0-xLX">
+                        <color key="badgeColor" systemColor="systemGreenColor"/>
+                    </tabBarItem>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Szi-Vy-dHO">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="jrf-ga-wXu" kind="relationship" relationship="rootViewController" id="TQL-2b-jYj"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LdK-6a-k0u" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="533.58778625954199" y="-118.30985915492958"/>
         </scene>
     </scenes>
     <resources>
@@ -150,6 +239,9 @@
         <image name="house.fill" catalog="system" width="128" height="104"/>
         <image name="person.3" catalog="system" width="128" height="66"/>
         <image name="person.3.fill" catalog="system" width="128" height="66"/>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
