--- a/EPath-v0.0.1/Base.lproj/Main.storyboard
+++ b/EPath-v0.0.1/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
+        <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -18,31 +19,67 @@
                         <viewLayoutGuide key="safeArea" id="iFF-mM-1vj"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Scenarios" image="person.3" catalog="system" selectedImage="person.3.fill" id="dIf-q0-xLX">
-                        <color key="badgeColor" systemColor="systemGreenColor"/>
+                    <tabBarItem key="tabBarItem" title="Scenarios" image="person.3" catalog="system" id="dIf-q0-xLX">
+                        <imageReference key="selectedImage" image="person.3.fill" catalog="system" renderingMode="original"/>
                     </tabBarItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4gm-d3-629" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="535" y="-184"/>
+            <point key="canvasLocation" x="1329" y="-561"/>
         </scene>
         <!--Home-->
         <scene sceneID="bbi-hk-iIk">
             <objects>
                 <viewController id="fRX-2c-1Ce" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="yTL-O0-24G">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="1200"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fgi-DK-uQr">
+                                <rect key="frame" x="16" y="20" width="361" height="1097"/>
+                                <subviews>
+                                    <datePicker contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" style="inline" translatesAutoresizingMaskIntoConstraints="NO" id="2Es-yC-tX9">
+                                        <rect key="frame" x="0.0" y="-28" width="393" height="393"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="tintColor" systemColor="systemBlueColor"/>
+                                    </datePicker>
+                                </subviews>
+                                <edgeInsets key="layoutMargins" top="8" left="8" bottom="8" right="8"/>
+                            </scrollView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="YCt-N6-UQH"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="YCt-N6-UQH" firstAttribute="trailing" secondItem="fgi-DK-uQr" secondAttribute="trailing" constant="16" id="FKG-DR-YJn"/>
+                            <constraint firstItem="YCt-N6-UQH" firstAttribute="bottom" secondItem="fgi-DK-uQr" secondAttribute="bottom" id="QdA-4S-97i"/>
+                            <constraint firstItem="fgi-DK-uQr" firstAttribute="top" secondItem="yTL-O0-24G" secondAttribute="top" constant="20" symbolic="YES" id="dGu-bs-Hb6"/>
+                            <constraint firstItem="fgi-DK-uQr" firstAttribute="leading" secondItem="YCt-N6-UQH" secondAttribute="leading" constant="16" id="slN-s0-Lu6"/>
+                        </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Home" image="house" catalog="system" selectedImage="house.fill" id="cgV-oa-pin">
-                        <color key="badgeColor" systemColor="systemPurpleColor"/>
+                    <tabBarItem key="tabBarItem" title="Home" image="house" catalog="system" id="cgV-oa-pin">
+                        <imageReference key="selectedImage" image="house.fill" catalog="system" renderingMode="original"/>
                     </tabBarItem>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="393" height="1200"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7r7-fg-yXV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="535" y="-791"/>
+            <point key="canvasLocation" x="533.58778625954199" y="-791.54929577464793"/>
+        </scene>
+        <!--Home-->
+        <scene sceneID="hiH-ps-ecZ">
+            <objects>
+                <viewController id="TQO-0h-gHZ" customClass="Home" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="uQf-gA-VXS">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="CIe-YK-Rnf"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FgS-u9-VHN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1136.6412213740457" y="-1263.3802816901409"/>
         </scene>
         <!--Main Tab Bar Controller-->
         <scene sceneID="Acy-7k-Rgb">
@@ -51,9 +88,8 @@
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="mh9-q8-rTs">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" systemColor="systemBlueColor"/>
                         <color key="tintColor" systemColor="systemRedColor"/>
-                        <color key="selectedImageTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="selectedImageTintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
                         <segue destination="fRX-2c-1Ce" kind="relationship" relationship="viewControllers" id="HE9-Xw-lIZ"/>
@@ -75,12 +111,6 @@
         </systemColor>
         <systemColor name="systemBlueColor">
             <color red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemGreenColor">
-            <color red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemPurpleColor">
-            <color red="0.68627450980000004" green="0.32156862749999998" blue="0.87058823529999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemRedColor">
             <color red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
