--- a/EPath-v0.0.1/Base.lproj/Main.storyboard
+++ b/EPath-v0.0.1/Base.lproj/Main.storyboard
@@ -34,14 +34,14 @@
                                                         <constraint firstAttribute="height" constant="101" id="m1k-d7-fdQ"/>
                                                     </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f7b-Im-4pE">
-                                                    <rect key="frame" x="170" y="21" width="193" height="24"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="justified" lineBreakMode="clip" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f7b-Im-4pE">
+                                                    <rect key="frame" x="170" y="21" width="203" height="24"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tfI-Oq-jnM">
-                                                    <rect key="frame" x="170" y="80" width="193" height="24"/>
+                                                <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tfI-Oq-jnM">
+                                                    <rect key="frame" x="170" y="83.666666666666671" width="193" height="20.333333333333329"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -49,9 +49,8 @@
                                             </subviews>
                                             <constraints>
                                                 <constraint firstAttribute="bottom" secondItem="F1i-ar-6GE" secondAttribute="bottom" constant="10" id="7os-Ku-Mvb"/>
+                                                <constraint firstAttribute="trailing" secondItem="f7b-Im-4pE" secondAttribute="trailing" constant="20" symbolic="YES" id="AW3-8g-hCA"/>
                                                 <constraint firstItem="F1i-ar-6GE" firstAttribute="top" secondItem="jpz-a6-NSz" secondAttribute="top" constant="10" id="Gty-N0-Szx"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="f7b-Im-4pE" secondAttribute="trailing" constant="10" id="NMi-53-HSH"/>
-                                                <constraint firstItem="tfI-Oq-jnM" firstAttribute="top" secondItem="f7b-Im-4pE" secondAttribute="bottom" constant="35" id="aHe-av-0CE"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="tfI-Oq-jnM" secondAttribute="trailing" constant="10" id="ec3-OG-0Za"/>
                                                 <constraint firstItem="F1i-ar-6GE" firstAttribute="leading" secondItem="jpz-a6-NSz" secondAttribute="leading" constant="10" id="hvM-gN-2Hr"/>
                                                 <constraint firstItem="f7b-Im-4pE" firstAttribute="top" secondItem="jpz-a6-NSz" secondAttribute="topMargin" constant="10" id="llH-e1-BE6"/>
@@ -109,22 +108,23 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="DESC" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r2Y-QI-LbM">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="DESC" textAlignment="justified" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r2Y-QI-LbM">
                                 <rect key="frame" x="20" y="300" width="353" height="197"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <color key="textColor" systemColor="labelColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5fM-4S-TGO">
                                 <rect key="frame" x="159" y="715" width="75" height="35"/>
-                                <color key="tintColor" systemColor="systemGreenColor"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="filled" title="Send"/>
+                                <buttonConfiguration key="configuration" style="filled" title="Send">
+                                    <color key="baseBackgroundColor" systemColor="systemIndigoColor"/>
+                                </buttonConfiguration>
                             </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="justified" translatesAutoresizingMaskIntoConstraints="NO" id="EKw-dG-GWB">
                                 <rect key="frame" x="20" y="536" width="353" height="163"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="backgroundColor" red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="0.29809736394557823" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="textColor" systemColor="labelColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -138,6 +138,7 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="fY5-lb-KEk"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="EKw-dG-GWB" firstAttribute="leading" secondItem="fY5-lb-KEk" secondAttribute="leading" constant="20" id="7BY-pN-rYO"/>
                             <constraint firstItem="EKw-dG-GWB" firstAttribute="top" secondItem="Kjs-rk-UHz" secondAttribute="bottom" constant="8" symbolic="YES" id="CAK-tY-dYc"/>
@@ -161,6 +162,9 @@
                             <constraint firstItem="fY5-lb-KEk" firstAttribute="trailing" secondItem="r2Y-QI-LbM" secondAttribute="trailing" constant="20" id="pna-q2-8Oj"/>
                             <constraint firstItem="fY5-lb-KEk" firstAttribute="bottom" secondItem="8Ca-hB-ABP" secondAttribute="bottom" constant="489" id="wBY-Pa-Vxn"/>
                         </constraints>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="w0c-9d-BXR" appends="YES" id="Dcb-lP-JG6"/>
+                        </connections>
                     </view>
                     <navigationItem key="navigationItem" id="eWK-0a-oh5"/>
                     <connections>
@@ -171,6 +175,11 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NsS-PV-OZ6" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="w0c-9d-BXR">
+                    <connections>
+                        <action selector="View_Tapped:" destination="EAa-n7-pLP" id="Z5p-sQ-DgS"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="2341.2213740458014" y="-118.30985915492958"/>
         </scene>
@@ -246,16 +255,19 @@
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemBlueColor">
-            <color red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGreenColor">
-            <color red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemIndigoColor">
+            <color red="0.34509803921568627" green="0.33725490196078434" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemPurpleColor">
-            <color red="0.68627450980000004" green="0.32156862749999998" blue="0.87058823529999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.68627450980392157" green="0.32156862745098042" blue="0.87058823529411766" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemRedColor">
-            <color red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
