added scenario facts, toolbox talks, images

--- a/EPath-v0.0.1/Base.lproj/Main.storyboard
+++ b/EPath-v0.0.1/Base.lproj/Main.storyboard
@@ -111,6 +111,10 @@
                                 <buttonConfiguration key="configuration" style="filled" title="Next">
                                     <color key="baseBackgroundColor" systemColor="systemIndigoColor"/>
                                 </buttonConfiguration>
+                                <connections>
+                                    <action selector="btn_Next_Clicked:" destination="EAa-n7-pLP" eventType="touchUpInside" id="dgV-6L-Fo0"/>
+                                    <segue destination="t5j-m0-EVq" kind="show" identifier="select_Scenario_Facts_Segue" id="6oA-Ni-pgE"/>
+                                </connections>
                             </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="justified" translatesAutoresizingMaskIntoConstraints="NO" id="EKw-dG-GWB">
                                 <rect key="frame" x="20" y="535" width="353" height="164"/>
@@ -128,14 +132,9 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="pngtree-thought-bubble-vector-png-image_15263871" translatesAutoresizingMaskIntoConstraints="NO" id="quU-8m-3ll">
-                                <rect key="frame" x="-18" y="90" width="429" height="486"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="default"/>
-                            </imageView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="Desc" textAlignment="justified" translatesAutoresizingMaskIntoConstraints="NO" id="5NQ-fX-48n">
-                                <rect key="frame" x="52" y="235" width="289" height="152"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <rect key="frame" x="20" y="152" width="353" height="346"/>
+                                <color key="backgroundColor" systemColor="secondaryLabelColor"/>
                                 <color key="textColor" systemColor="labelColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -145,14 +144,14 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <gestureRecognizers/>
                         <constraints>
-                            <constraint firstItem="5NQ-fX-48n" firstAttribute="leading" secondItem="fY5-lb-KEk" secondAttribute="leading" constant="52" id="4ZR-TQ-J1V"/>
+                            <constraint firstItem="5NQ-fX-48n" firstAttribute="leading" secondItem="fY5-lb-KEk" secondAttribute="leading" constant="20" id="4ZR-TQ-J1V"/>
                             <constraint firstItem="fY5-lb-KEk" firstAttribute="trailing" secondItem="Kjs-rk-UHz" secondAttribute="trailing" constant="148.33333333333331" id="5xs-wy-qCc"/>
                             <constraint firstItem="EKw-dG-GWB" firstAttribute="top" secondItem="Kjs-rk-UHz" secondAttribute="bottom" constant="7.6666666666667425" id="9RH-w5-l4w"/>
                             <constraint firstItem="Byd-YO-9ib" firstAttribute="top" secondItem="fY5-lb-KEk" secondAttribute="top" constant="20" id="DxH-SH-94F"/>
-                            <constraint firstItem="5NQ-fX-48n" firstAttribute="top" secondItem="Byd-YO-9ib" secondAttribute="bottom" constant="91" id="Jcb-wu-6ZW"/>
+                            <constraint firstItem="5NQ-fX-48n" firstAttribute="top" secondItem="Byd-YO-9ib" secondAttribute="bottom" constant="8" id="Jcb-wu-6ZW"/>
                             <constraint firstItem="5fM-4S-TGO" firstAttribute="top" secondItem="EKw-dG-GWB" secondAttribute="bottom" constant="16" id="NRM-rM-KoH"/>
                             <constraint firstItem="EKw-dG-GWB" firstAttribute="leading" secondItem="fY5-lb-KEk" secondAttribute="leading" constant="20" id="TaX-aI-hwQ"/>
-                            <constraint firstItem="Kjs-rk-UHz" firstAttribute="top" secondItem="5NQ-fX-48n" secondAttribute="bottom" constant="119.33333333333326" id="Vee-ny-ZRd"/>
+                            <constraint firstItem="Kjs-rk-UHz" firstAttribute="top" secondItem="5NQ-fX-48n" secondAttribute="bottom" constant="8.3333333333332575" id="Vee-ny-ZRd"/>
                             <constraint firstItem="Byd-YO-9ib" firstAttribute="centerX" secondItem="de5-b6-uvX" secondAttribute="centerX" id="XOH-ps-ioA"/>
                             <constraint firstItem="fY5-lb-KEk" firstAttribute="trailing" secondItem="EKw-dG-GWB" secondAttribute="trailing" constant="20" id="b3e-Ub-Ntc"/>
                             <constraint firstItem="Byd-YO-9ib" firstAttribute="leading" secondItem="fY5-lb-KEk" secondAttribute="leading" constant="20" id="dJt-PE-W1B"/>
@@ -160,7 +159,7 @@
                             <constraint firstItem="fY5-lb-KEk" firstAttribute="trailing" secondItem="5fM-4S-TGO" secondAttribute="trailing" constant="174.33333333333334" id="gfd-vf-yIt"/>
                             <constraint firstItem="5fM-4S-TGO" firstAttribute="leading" secondItem="fY5-lb-KEk" secondAttribute="leading" constant="159" id="kS2-Tv-2cM"/>
                             <constraint firstItem="fY5-lb-KEk" firstAttribute="bottom" secondItem="5fM-4S-TGO" secondAttribute="bottom" constant="19" id="lFs-5I-swi"/>
-                            <constraint firstItem="fY5-lb-KEk" firstAttribute="trailing" secondItem="5NQ-fX-48n" secondAttribute="trailing" constant="52" id="nCb-j1-gpc"/>
+                            <constraint firstItem="fY5-lb-KEk" firstAttribute="trailing" secondItem="5NQ-fX-48n" secondAttribute="trailing" constant="20" id="nCb-j1-gpc"/>
                             <constraint firstItem="Kjs-rk-UHz" firstAttribute="leading" secondItem="fY5-lb-KEk" secondAttribute="leading" constant="133" id="xMW-BL-QgX"/>
                         </constraints>
                         <connections>
@@ -182,6 +181,51 @@
                 </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="2341.2213740458014" y="-118.30985915492958"/>
+        </scene>
+        <!--Scenarios Facts View Controller-->
+        <scene sceneID="Cce-mA-aTN">
+            <objects>
+                <viewController id="t5j-m0-EVq" customClass="Scenarios_Facts_ViewController" customModule="EPath_v0_0_1" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="NTw-zG-g7V">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="justified" translatesAutoresizingMaskIntoConstraints="NO" id="Qoe-c2-2VE">
+                                <rect key="frame" x="16" y="167" width="361" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <color key="textColor" systemColor="labelColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="justified" translatesAutoresizingMaskIntoConstraints="NO" id="15P-eN-I17">
+                                <rect key="frame" x="16" y="362" width="361" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <color key="textColor" systemColor="labelColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="justified" translatesAutoresizingMaskIntoConstraints="NO" id="ux6-e7-ecl">
+                                <rect key="frame" x="16" y="568" width="361" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <color key="textColor" systemColor="labelColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="gTJ-ok-4ia"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="Ns3-6s-YDg"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="GnD-BA-FXp" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3290.8396946564885" y="-118.30985915492958"/>
         </scene>
         <!--Home-->
         <scene sceneID="bbi-hk-iIk">
@@ -215,11 +259,45 @@
                     <connections>
                         <segue destination="fRX-2c-1Ce" kind="relationship" relationship="viewControllers" id="HE9-Xw-lIZ"/>
                         <segue destination="STG-t0-j54" kind="relationship" relationship="viewControllers" id="ORn-jc-otr"/>
+                        <segue destination="teL-HP-mdy" kind="relationship" relationship="viewControllers" id="Spd-Fb-PRI"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UB6-xq-LQE" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-372" y="-487"/>
+        </scene>
+        <!--ToolBox Talks-->
+        <scene sceneID="OLD-WP-5tM">
+            <objects>
+                <navigationController id="teL-HP-mdy" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="ToolBox Talks" id="fRs-BC-Mwa"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="ke5-BI-vl5">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="dyY-Ul-gsY" kind="relationship" relationship="rootViewController" id="BSo-MK-8hK"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vxp-s1-NSm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="534" y="658"/>
+        </scene>
+        <!--Tool Box View Controller-->
+        <scene sceneID="sGO-h5-OfQ">
+            <objects>
+                <viewController id="dyY-Ul-gsY" customClass="ToolBoxViewController" customModule="EPath_v0_0_1" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ygH-a3-Dhc">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="8YR-63-CJx"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="gjU-NX-hGw"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lSc-Oq-Vk2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1460" y="658"/>
         </scene>
         <!--Scenarios-->
         <scene sceneID="dWl-am-7Fz">
@@ -248,9 +326,11 @@
         <image name="house.fill" catalog="system" width="128" height="104"/>
         <image name="person.3" catalog="system" width="128" height="66"/>
         <image name="person.3.fill" catalog="system" width="128" height="66"/>
-        <image name="pngtree-thought-bubble-vector-png-image_15263871" width="833.33331298828125" height="833.33331298828125"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="secondaryLabelColor">
+            <color red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
